--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
         </div>
       </section>
     </section>
-    <!-- amazing section end -->
+    <!-- amazing section ends -->
 
     <section class="make-orders"></section>
     <script
