--- a/index.html
+++ b/index.html
@@ -18,6 +18,13 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,400;0,500;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,700;1,800&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
+      integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
   </head>
   <body>
     <!-- header section start -->
@@ -328,6 +335,66 @@
         <span>Testimonials</span>
         <h2>Happy Clients Say</h2>
       </section>
+      <div
+        id="carouselExampleControls"
+        class="carousel carousel-dark slide"
+        data-bs-ride="carousel"
+      >
+        <div class="carousel-inner">
+          <div class="carousel-item active text-center">
+            <p class="fs-4">
+              Very fast delivery. I recommend to everyone. The food is very hot
+              and<br />
+              fresh and also as tasty as in a restaurant. The application is
+              very<br />
+              convenient and understandable.
+            </p>
+            <img src="images/meta.jpg" alt="..." />
+            <h4>Marco Bituchini</h4>
+            <span>May 16,2020</span>
+          </div>
+          <div class="carousel-item text-center">
+            <p class="fs-4">
+              Very fast delivery. I recommend to everyone. The food is very hot
+              and<br />
+              fresh and also as tasty as in a restaurant. The application is
+              very <br />convenient and understandable.
+            </p>
+            <img src="images/meta.jpg" alt="..." />
+            <h4>Marco Bituchini</h4>
+            <span>May 16,2020</span>
+          </div>
+          <div class="carousel-item text-center">
+            <p class="fs-4">
+              Very fast delivery. I recommend to everyone. The food is very hot
+              and <br />fresh and also as tasty as in a restaurant. The
+              application is very<br />
+              convenient and understandable.
+            </p>
+            <img src="images/meta.jpg" alt="..." />
+            <h4>Marco Bituchini</h4>
+            <span>May 16,2020</span>
+          </div>
+        </div>
+        <button
+          class="carousel-control-prev"
+          type="button"
+          data-bs-target="#carouselExampleControls"
+          data-bs-slide="prev"
+        >
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button
+          class="carousel-control-next"
+          type="button"
+          data-bs-target="#carouselExampleControls"
+          data-bs-slide="next"
+        >
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
     </section>
     <!-- carosoal end -->
 
@@ -398,7 +465,157 @@
     </section>
     <!-- amazing section ends -->
 
-    <section class="make-orders"></section>
+    <!-- Orders With Our Application start -->
+    <section class="make-orders">
+      <div class="container make-order-text">
+        <h2 class="text-white mt-5">
+          Make Orders With<br />
+          <span class="app">Our Application</span>
+        </h2>
+        <span class="d-flex flex-row text-white"
+          ><i class="fa-regular fa-square-check fs-3 text-warning"></i>
+          <div>
+            <h4 class="ps-4">Order and pay in a few minutes</h4>
+            <p class="ps-4">
+              Сhoose food and pay for the order in a couple of clicks online<br />
+              also choose you current location using GPS
+            </p>
+          </div>
+        </span>
+        <span class="d-flex flex-row text-white mt-3"
+          ><i class="fa-regular fa-square-check fs-3 text-warning"></i>
+          <div>
+            <h4 class="ps-4">Check Delivery Status</h4>
+            <p class="ps-4">
+              Follow the status of your order in real time and also track the<br />
+              delivery path until you get it.
+            </p>
+          </div>
+        </span>
+
+        <div class="app-download container ps-5 mt-3">
+          <img src="../food delivery/images/btn1play store.png " alt="" />
+          <img
+            class="ms-5"
+            src="../food delivery/images/btn2app-store.png"
+            alt=""
+          />
+        </div>
+      </div>
+    </section>
+    <!-- Orders With Our Application end -->
+
+    <!-- Latest Posts & Articles start -->
+    <section class="posts-articles">
+      <section class="reason-text">
+        <span>Our blog</span>
+        <h2>Latest Posts & Articles</h2>
+        <p>
+          Here you can find recipes from the most famous<br />
+          chefs and read useful information.
+        </p>
+      </section>
+      <section>
+        <div class="container mt-5 text-images">
+          <div class="row">
+            <div class="col-4">
+              <div class="card">
+                <img
+                  src="../food delivery/images/post1.jpg"
+                  class="card-img-top"
+                  alt="..."
+                />
+                <div class="card-body">
+                  <p class="card-text text-center">
+                    The Traditional Recipe Of Apple Pie
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="col-4">
+              <div class="card">
+                <img
+                  src="../food delivery/images/post2.jpg"
+                  class="card-img-top"
+                  alt="..."
+                />
+                <div class="card-body">
+                  <p class="card-text text-center">
+                    Famous Vanilla Bean Cupcakes
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="col-4">
+              <div class="card">
+                <img
+                  src="../food delivery/images/post3.jpg"
+                  class="card-img-top"
+                  alt="..."
+                />
+                <div class="card-body">
+                  <p class="card-text text-center">
+                    The Most Tasty Cake We've Ever Made
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+    </section>
+    <!-- Latest Posts & Articles end -->
+
+    <!-- footer start -->
+    <footer class="footer">
+      <div class="img-coll text-center">
+        <span
+          ><i class="fa-sharp fa-solid fa-phone-volume text-white"></i>
+        </span>
+      </div>
+
+      <div class="container">
+        <div class="row text-center">
+          <div class="col-md-4 text-white">
+            <img src="images/logo.png" alt="" />
+            <h5 class="mt-3">Working Schedule</h5>
+            <p class="mt-3">
+              Mon - Sat: 9:00 am - 10:00 pm<br />
+              Sun: 10:00 am - 8:00 pm
+            </p>
+          </div>
+          <div class="col-md-4 text-white">
+            <h4 class="mt-3">
+              <span class="text-warning">Call us</span> to make<br />
+              an order!
+            </h4>
+            <p class="mt-3">Don’t be shy, we don’t bite :)</p>
+            <p class="mt-3">+1 654 847 52 25</p>
+          </div>
+          <div class="col-md-4 text-white">
+            <h5 class="">Payment Option</h5>
+            <img class="mt-2" src="images/payment.png" alt="" />
+            <h5 class="mt-3 mb-3">Download the App</h5>
+            <img src="images/btn1play store.png" alt="" />
+            <img src="images/btn2app-store.png" alt="" />
+          </div>
+        </div>
+      </div>
+      <div class="footer-end">
+        <div class="container mt-5 bg-dark">
+          <div class="row text-white">
+            <div class="col-6 pt-3">
+              <p>© All Rights Reserved. DeliTaste 2020</p>
+            </div>
+            <div class="col-6 text-end pt-3">
+              <p>Find Us: Facebook | Twitter | Instagram</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
+    <!-- footer end -->
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
